<resources>
    <string name="app_name">Firebase</string>
    <string name="login">Login</string>
    <string name="description">description</string>
    <string name="email_address">Email Address</string>s
    <string name="password">Password</string>
    <string name="loginn">Login</string>
    <string name="default_web_client_id">Login</string>
    <string name="continue_with_google">Continue With Google</string>
    <string name="continue_with_apple">Continue With Apple</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="or_login_with">OR LOGIN WITH</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign up</string>
    <string name="login1">login</string>
    <string name="sign_up">Sign Up</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="signup">SignUp</string>
    <string name="logout">LogOut</string>
</resources>