<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="SignUp"
        android:textSize="@dimen/_20sdp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/guideline6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline7" />


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/description"
        app:layout_constraintEnd_toEndOf="@+id/tv1"
        app:layout_constraintStart_toStartOf="@+id/tv1"
        app:layout_constraintTop_toBottomOf="@+id/tv1"
        app:srcCompat="@drawable/svg_logo" />

    <EditText
        android:id="@+id/SignUpEmail"
        android:layout_width="0dp"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginTop="32dp"
        android:autofillHints=""
        android:textSize="@dimen/_12sdp"
        android:background="@drawable/shape_grey_rect_curve"
        android:ems="10"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:paddingStart="@dimen/_20sdp"
        android:textColorHint="@color/grey_a1a4b2"
        app:layout_constraintEnd_toStartOf="@+id/guideline6"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline5"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:layout_constraintVertical_weight="1" />

    <EditText
        android:id="@+id/SignUpPassword"
        android:layout_width="0dp"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginTop="20dp"
        android:autofillHints=""
        android:textSize="@dimen/_12sdp"
        android:background="@drawable/shape_grey_rect_curve"
        android:ems="10"
        android:hint="Password"
        android:inputType="textPassword"
        android:paddingStart="@dimen/_20sdp"
        android:textColorHint="@color/grey_a1a4b2"
        app:layout_constraintEnd_toStartOf="@+id/guideline6"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline5"
        app:layout_constraintTop_toBottomOf="@+id/SignUpEmail"
        app:layout_constraintVertical_weight="1" />

    <EditText
        android:id="@+id/SignUpCPassword"
        android:layout_width="0dp"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginTop="20dp"
        android:textSize="@dimen/_12sdp"
        android:autofillHints=""
        android:background="@drawable/shape_grey_rect_curve"
        android:ems="10"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:paddingStart="@dimen/_20sdp"
        android:textColorHint="@color/grey_a1a4b2"
        app:layout_constraintEnd_toStartOf="@+id/guideline6"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/guideline5"
        app:layout_constraintTop_toBottomOf="@+id/SignUpPassword"
        app:layout_constraintVertical_weight="1" />

    <Button
        android:id="@+id/button1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:textSize="@dimen/_15sdp"
        android:backgroundTint="@color/purple_8e97fd"
        android:text="@string/signup"
        app:layout_constraintEnd_toStartOf="@+id/guideline6"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline5"
        app:layout_constraintTop_toBottomOf="@+id/SignUpCPassword" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/don_t_have_an_account_sign_up"
        app:layout_constraintEnd_toStartOf="@+id/guideline6"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="@+id/guideline5"
        app:layout_constraintTop_toBottomOf="@+id/button1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="20dp" />
</androidx.constraintlayout.widget.ConstraintLayout>
